--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>Exercise – Falling Emojis</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <div class="emojiWrapper">
+        <div class="emoji" aria-hidden="true">🎉</div>
+      </div>
+      <img class="avatar" src="./img/avatars/002.png" alt="user avatar" />
+      <h1>Someone Bought You A Coffee!</h1>
+    </main>
+  </body>
   <script type="module" src="./index.js"></script>
 </html>
