Mapped over the emojis object to randomly render in the DOM

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <div class="emojiWrapper">
-        <div class="emoji" aria-hidden="true">🎉</div>
+        <!-- Emojis will be appended here by JavaScript -->
       </div>
       <img class="avatar" src="./img/avatars/002.png" alt="user avatar" />
       <h1>Someone Bought You A Coffee!</h1>
